transaction-service/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transactions-ms
  namespace: banking
  labels:
    app: transactions-ms
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transactions-ms
  template:
    metadata:
      labels:
        app: transactions-ms
        version: v1
      annotations:
        sidecar.istio.io/inject: "true"
        prometheus.io/scrape: "true"
        prometheus.io/port:   "8082"
        prometheus.io/path:   "/actuator/prometheus"
    spec:
      serviceAccountName: transactions-ms-sa
      containers:
        - name: transactions-ms
          image: rewabank/rewabank-transactions-ms:latest
          ports:
            - containerPort: 8082
          resources:
            requests:
              memory: "384Mi"
              cpu:    "500m"
            limits:
              memory: "768Mi"
              cpu:    "1000m"
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8082
            initialDelaySeconds: 200
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8082
            initialDelaySeconds: 180
            periodSeconds: 10
