transaction-service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: transactions-service
  namespace: banking
  labels:
    app: transactions-ms
spec:
  selector:
    app: transactions-ms
  ports:
    - name: http
      port: 8082
      targetPort: 8082
  type: ClusterIP
