transaction-service/k8s/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: accounts-ms-vs
  namespace: banking
spec:
  hosts:
    - accounts-service.banking.svc.cluster.local
  http:
    - match:
        - uri:
            prefix: /api/v1/accounts
      timeout: 10s
      retries:
        attempts: 2
        retryOn: gateway-error,reset
        perTryTimeout: 5s
      route:
        - destination:
            host: accounts-service.banking.svc.cluster.local
            port:
              number: 8081
